Bug #1100405 arm: dts: add carveout_fd heap for sharkl3 go
[root cause  ] for faceid
[changes     ] add carveout_fd heap for sharkl3 go
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sharkl3 go
[test case]:compile pass
[reviewers   ] Wenan Hu
[change_type ] feature
[tag_product ] specific

add carveout_fd heap for sharkl3 go.

Change-Id: I249c6fd1e08b0446757177b2a3850683967e82d9
Signed-off-by: Sheng Xu <sheng.xu@unisoc.com>

--- a/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
+++ b/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
@@ -74,6 +74,10 @@
 		memory-region-se = <&tos_reserved>, <&sml_reserved>;
 	};
 
+	sprd-map-user {
+		compatible = "sprd,map-user";
+	};
+
 	ion {
 		compatible = "sprd,ion";
 		#address-cells = <1>;
@@ -90,6 +94,13 @@
 			label = "carveout_fb";
 			type = <2>;
 			memory-region = <&fb_reserved>;
+		};
+
+		heap@4 {
+			reg = <4>;
+			label = "carveout_fd";
+			type = <2>;
+			memory-region = <&fd_reserved>;
 		};
 	};
 
