--- a/arch/arm64/boot/dts/sprd/sp9863a-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-1h10.dts
@@ -291,6 +291,10 @@
 	regulator-always-on;
 };
 
+&vddsim2 {
+	status = "disabled";
+};
+
 &hsphy {
 	vdd-supply = <&vddusb33>;
 	extcon = <&pmic_typec>;
