Bug #1125184 arm: dts: add djtag dts node
[root cause  ] add djtag dts node
[changes     ] add djtag dts node
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: pike2 & sharkle
[test case]: N/A
[reviewers   ] lanqing.liu
[change_type ] new feature
[tag_product ] common

add djtag dts node for pike2 and sharkle at androidq

Change-Id: Id4c3f5f53057fa369dda4763b91ef4be2a7da39d
Signed-off-by: Xiaopeng Bai <xiaopeng.bai@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -9,6 +9,7 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/soc/sprd,pike2-regs.h>
 #include <dt-bindings/soc/sprd,pike2-mask.h>
+#include <dt-bindings/clock/sprd,sc7731e-clk.h>
 
 / {
 	interrupt-parent = <&gic>;
@@ -462,6 +463,21 @@
 				#thermal-sensor-cells = <1>;
 				nvmem-cells = <&cthm_sign>, <&cthm_ratio>, <&cthm_delta>;
 				nvmem-cell-names = "thm_sign_cal", "thm_ratio_cal", "thm_delta_cal";
+			};
+
+			djtag: djtag@40340000 {
+				compatible = "sprd,djtag";
+				reg = <0x40340000 0x1000>;
+				syscon-names = "soft_rst";
+				syscons = <&aon_apb_regs REG_AON_APB_APB_RST2
+					MASK_AON_APB_DJTAG_SOFT_RST>;
+				clock-names = "enable";
+				clocks = <&aonapb_gate CLK_DJTAG_EB>;
+				hwlocks = <&hwlock 10>;
+				hwlock-names = "djtag";
+
+				#address-cells = <1>;
+				#size-cells = <0>;
 			};
 		};
 
