--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -3384,7 +3384,8 @@ CONFIG_SPRD_CAM_PW_DOMAIN_R4P0=y
 # CONFIG_SPRD_AUTOTEST_OTG is not set
 CONFIG_SPRD_DEBUG=y
 # CONFIG_SPRD_POWER_DEBUG is not set
-# CONFIG_SPRD_DJTAG is not set
+CONFIG_SPRD_DJTAG_CORE=y
+CONFIG_SPRD_DJTAG=y
 # CONFIG_SPRD_BUSMONITOR is not set
 # CONFIG_SPRD_APB_BUSMONITOR is not set
 CONFIG_SPRD_EIRQSOFF=y
