--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -3553,7 +3553,8 @@ CONFIG_SPRD_CAM_PW_DOMAIN_R5P1=y
 # CONFIG_SPRD_AUTOTEST_OTG is not set
 CONFIG_SPRD_DEBUG=y
 CONFIG_SPRD_POWER_DEBUG=y
-# CONFIG_SPRD_DJTAG is not set
+CONFIG_SPRD_DJTAG_CORE=y
+CONFIG_SPRD_DJTAG=y
 # CONFIG_SPRD_BUSMONITOR is not set
 # CONFIG_SPRD_APB_BUSMONITOR is not set
 # CONFIG_SPRD_IRQS_MONITOR is not set
