Bug #1122882 arm: dts: change fb size for sharkl3-1 go
[root cause  ] change fb size for sharkl3-1 go
[changes     ] sp9863a-1h10_go_32b_Natv.dts
[side effects] no
[self test   ]:
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:s9863a1h10_go_32b
[test case]:display selftest ok.
[reviewers   ] leon.he
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change fb size for sharkl3-1 go.

Change-Id: I99a826be40f5c6d44032060b4fb8a87727687589
Signed-off-by: Yuri Yu <Yuri.Yu@unisoc.com>

--- a/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
+++ b/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
@@ -241,8 +241,9 @@
 		reg = <0xbe269000 0x00500000>;
 	};
 
+	/* fb_size(HD): 3 * (head + payload) = 0xa91580, 4k align: 0xa92000 */
 	fb_reserved: framebuffer@be769000 {
-		reg = <0xbe769000 0x1817000>;
+		reg = <0xbe769000 0xa92000>;
 	};
 };
 
