Bug #1127814 arm64: dts: create copy files of ums512-1h10*.dts for compatible between android9.0 and android10.0
[root cause  ] ums512-1h10*.dts files can not compatible between android9.0 and android10.0
[changes     ] create copy files of ums512-1h10*.dts
[side effects] none
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: ums512-1h10
[test case]: device start normal
[reviewers   ] luther.ge
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

the file ums512-1h10.dts and ums512-mach.dts can not compatible to android10.0 and android9.0 at the same time, so
we copy these two files renamed ums512-1h10-p.dts and ums512-mach-p.dts reserved for android9.0 use, and will
modified ums512-1h10.dts and ums512-mach.dts later only android10.0 use

Change-Id: I6159a849a5c82a50790abd9df0e59d2846eb98f3
Signed-off-by: haibin.xu <haibin.xu@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/Makefile
+++ b/arch/arm64/boot/dts/sprd/Makefile
@@ -23,6 +23,7 @@ dtb-$(CONFIG_ARCH_SPRD) += sc9836-openphone.dtb \
 			   ums312-20c10.dtb	\
 			   ums312-3h10-4pro.dtb      \
 			   ums512-1h10.dtb	\
+			   ums512-1h10-p.dtb	\
 			   ums518-haps.dtb	\
 			   ums518-haps-bkd.dtb  \
 			   sp9832ep-haps.dtb
