--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -887,6 +887,7 @@
 					"pmu_pwr_status",
 					"vsp_domain_eb";
 				iommus = <&iommu_vsp>;
+				sprd,qos = <&vsp_qos>;
 				status = "disabled";
 			};
 
