Bug #1132105 arm64: configs: Open CONFIG_F2FS_RESERVE_SPACE_FILTER macro
[root cause  ] Open CONFIG_F2FS_RESERVE_SPACE_FILTER macro
[changes     ] Open CONFIG_F2FS_RESERVE_SPACE_FILTER macro
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: 9863a
[test case]: poweron
[reviewers   ] ke.xu wayne.wen
[change_type ] feature_bugfix
[tag_product ] common

open CONFIG_F2FS_RESERVE_SPACE_FILTER

Change-Id: I501a9fb6d9b3f4f11cfd7f0797e7ddd8377454f5
Signed-off-by: Carson Wu <carson.wu@spreadtrum.com>

--- a/arch/arm64/configs/sprd_sharkl3_defconfig
+++ b/arch/arm64/configs/sprd_sharkl3_defconfig
@@ -4001,7 +4001,7 @@ CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IO_TRACE is not set
-# CONFIG_F2FS_RESERVE_SPACE_FILTER is not set
+CONFIG_F2FS_RESERVE_SPACE_FILTER=y
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
