Bug #1094376 arm: dts: Fix camera dts config error
[root cause  ] config error
[changes     ] dts config
[side effects]no
[self test   ]:camera
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp7731e_1h10,sp7731e_1h20
[test case]:camera rotation
[reviewers   ] ming.tang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Fixed camera dts config error

Change-Id: I262b0d7d9506470c997dac1dfef446031dbdf4b6
Signed-off-by: Langbiao Tan <langbiao.tan@spreadtrum.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-native.dts
@@ -182,7 +182,7 @@
 
 	sprd_rotation {
 		compatible = "sprd,sprd_rotation";
-		sprd,cam-ahb-syscon = <&ap_ahb_regs>;
+		sprd,cam-ahb-syscon = <&mm_ahb_regs>;
 		iommus = <&iommu_dcam>;
 		status = "okay";
 	};
