Bug #1132640 arm64: dts: Add apcpu clock controller node
[root cause  ] Apcpu clock controller node is not configured
[changes     ] modify dts
[side effects] No
[self test   ]: Yes
[download normally]: Yes
[power on/off normally]: Yes
[do common repository/branch inspection]: Yes
[is there dependence]: No
[confirm dependent commit]: No
[board]: ums512-1h10
[test case]: No
[reviewers   ] laura.yu ben.li xiaolong.zhang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add the config of apcpu clock controller node.

Change-Id: I48c18612494d5934ab4fadd3e500c5449fee30d3
Signed-off-by: Xiongpeng Wu <xiongpeng.wu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512.dtsi
@@ -794,6 +794,12 @@
 			#clock-cells = <1>;
 		};
 
+		apcpu_sec_clk: apcpu-sec-clk {
+			compatible = "sprd,sharkl5pro-apcpu-clk-sec";
+			sprd,sec-clk;
+			#clock-cells = <1>;
+		};
+
 		/*    etm */
 		/* -> apcpu_funnel lit/big */
 		/* -> apcpu_etf lit/big */
