Bug #1129735 arm:config:Add SND_SOC_SPRD_SHARKLE and SND_SOC_SPRD_PIKE2 Macro for androidq brinup
[root cause  ] add SND_SOC_SPRD_SHARKLE and SND_SOC_SPRD_PIKE2 for
sharkle and pike2 androidq bringup
[changes     ] add SND_SOC_SPRD_SHARKLE and SND_SOC_SPRD_PIKE2 for
sharkle and pike2 androidq bringup
[side effects] no
[self test   ]:mp3 playback ok
[download normally]: ok
[power on/off normally]:ok
[do common repository/branch inspection]:ok
[is there dependence]:no
[confirm dependent commit]:ok
[board]:9832e_1h10
[test case]: mp3 playback ok
[reviewers   ] baolin.wang yintang.ren
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

add SND_SOC_SPRD_SHARKLE and SND_SOC_SPRD_PIKE2 for sharkle and pike2
androidq bringup

Change-Id: I48ec078b2f6893a6c0a9f770597c484a74dbd715
Signed-off-by: Peter Huang <peter.huang@unisoc.com>

--- a/arch/arm/configs/sprd_sharkl5_defconfig
+++ b/arch/arm/configs/sprd_sharkl5_defconfig
@@ -2551,6 +2551,8 @@ CONFIG_SND_SOC_SPRD_VBC_V4_SC2730=y
 # CONFIG_SND_SOC_SPRD_I2S_DUMMY is not set
 # CONFIG_SND_SOC_SPRD_R1P0V3_SC2721 is not set
 # CONFIG_SND_SOC_SPRD_SHARKL3 is not set
+# CONFIG_SND_SOC_SPRD_SHARKLE is not set
+# CONFIG_SND_SOC_SPRD_PIKE2 is not set
 
 #
 # SPRD VBC Dai Version
