--- a/arch/arm64/configs/sprd_sharkl3_defconfig
+++ b/arch/arm64/configs/sprd_sharkl3_defconfig
@@ -2442,6 +2442,8 @@ CONFIG_SND_SOC_SPRD=y
 # CONFIG_SND_SOC_SPRD_I2S_DUMMY is not set
 CONFIG_SND_SOC_SPRD_R1P0V3_SC2721=y
 CONFIG_SND_SOC_SPRD_SHARKL3=y
+# CONFIG_SND_SOC_SPRD_SHARKLE is not set
+# CONFIG_SND_SOC_SPRD_PIKE2 is not set
 
 #
 # SPRD VBC Dai Version
