--- a/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
+++ b/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv.dts
@@ -159,8 +159,8 @@
 					<3765000 25>, <3750000 20>, <3726000 15>,
 					<3687000 10>, <3658000 5>, <3400000 0>;
 		charge-sdp-current-microamp = <500000 500000>;
-		charge-dcp-current-microamp = <1200000 3000000>;
-		charge-cdp-current-microamp = <1500000 1500000>;
+		charge-dcp-current-microamp = <1150000 3000000>;
+		charge-cdp-current-microamp = <1150000 1150000>;
 		charge-unknown-current-microamp = <500000 500000>;
 	};
 
@@ -182,13 +182,15 @@
 		cm-fuel-gauge = "sc27xx-fgu";
 
 		/* in deci centigrade */
-		cm-battery-cold = <50>;
+		cm-battery-cold = <200>;
 		cm-battery-cold-in-minus;
 		cm-battery-hot = <800>;
 		cm-battery-temp-diff = <100>;
 
 		/* Allow charging for 6hr */
-		cm-charging-max = <18000000>;
+		cm-charging-max = <21600000>;
+		/* recovery charging after stop charging 3hr */
+		cm-discharging-max = <10800000>;
 
 		/* the interval to feed charger watchdog */
 		cm-wdt-interval = <60>;
