Bug #1127814 arm64: dts: modified bootargs and delete fstab for bringup
[root cause ] rootfs change and noneed fstab beacause of surperimg for sharkl5Pro androidQ bringup
[changes ] modified bootargs and delete fstab
[side effects] no
[self test ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sharkl5Pro
[test case]:compile passed
[reviewers ] luther.ge
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

1. modified the rootfs from system to ramdisk and open selinu permissive
2. remove fatab avoid kernel to verify vendor and product beacause
superimg include them

Change-Id: I58ad32fca97dc835d4296ba3eb192deea3b558b5
Signed-off-by: Xixin Liu <xixin.liu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
@@ -60,26 +60,9 @@
 
 			vbmeta {
 				compatible = "android,vbmeta";
-				parts = "vbmeta,boot,recovery,system,vendor,product";
+				parts = "socko,odmko,boot,recovery,dtbo,l_modem,pm_sys,l_ldsp,l_gdsp";
 			};
 
-			fstab {
-				compatible = "android,fstab";
-				vendor {
-					compatible = "android,vendor";
-					dev = "/dev/block/platform/soc/soc:ap-apb/71400000.sdio/by-name/vendor";
-					type = "ext4";
-					mnt_flags = "ro,barrier=1";
-					fsmgr_flags = "wait";
-				};
-				product {
-					compatible = "android,product";
-					dev = "/dev/block/platform/soc/soc:ap-apb/71400000.sdio/by-name/product";
-					type = "ext4";
-					mnt_flags = "ro,barrier=1";
-					fsmgr_flags = "wait";
-				};
-			};
 		};
 	};
 
