Bug #1128327 arm: dts: Add flash wd3124da bring up in andorid q
[root cause  ] add flash wd3124da bring up in andorid q
[changes     ] no
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:startup normally torch open normally
[reviewers   ] hai.li
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add flash wd3124da bring up in andorid q.

Change-Id: Ie200b0d952d05ff186ab6bca917a70bb9bc35e99
Signed-off-by: Steven Ying <steven.ying@unisoc.com>

--- a/arch/arm/boot/dts/sp7731e-1h20-overlay.dts
+++ b/arch/arm/boot/dts/sp7731e-1h20-overlay.dts
@@ -46,6 +46,13 @@
 				};
 			};
 
+			flash-gpios {
+				compatible = "sprd,flash-wd3124da";
+				flash-ic = <3124>;
+				flash-torch-en-gpios = <&ap_gpio 12 0>;
+				flash-en-gpios = <&ap_gpio 13 0>;
+			};
+
 			pwm_backlight: sprd_backlight {
 				compatible = "pwm-backlight";
 				pwms = <&pwms 1 20000>;
