--- a/arch/arm/boot/dts/sp7731e-mach.dtsi
+++ b/arch/arm/boot/dts/sp7731e-mach.dtsi
@@ -164,6 +164,7 @@
 	vqmmc-supply = <&vddsdio>;
 	voltage-ranges = <3000 3000>;
 	bus-width = <4>;
+	sd-uhs-sdr104;
 	sd-uhs-sdr50;
 	sprd,name = "sdio_sd";
 	no-sdio;
