Bug #1137519 arm: dts: enable low simulator resolution function
[root cause  ] enable low simulator resolution function
[changes     ] sp7731e-1h20-native.dts
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp7731e-1h20
[test case]:display work ok
[reviewers   ] thomas.chai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Pike2 1h20 board enable low simulator resolution function.

Change-Id: I4c3fcaeb276cffd5509c7d6d92886e71a0e734ce
Signed-off-by: Albert Zhang <albert.zhang@spreadtrum.com>

--- a/arch/arm/boot/dts/sp7731e-1h20-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h20-native.dts
@@ -295,6 +295,8 @@
 		#size-cells = <0>;
 		reg = <0>;
 
+		sprd,surface-width = <480>;
+		sprd,surface-height = <854>;
 		reset-gpio = <&ap_gpio 32 GPIO_ACTIVE_HIGH>;
 		port {
 			reg = <1>;
