Bug #1094376 arm: dts: change mipi dts config
[root cause  ] camera bringup
[changes     ] dts
[side effects] no
[self test   ]:camera
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp7731e_1h10
[test case]:camera
[reviewers   ] langbiao.tan,yangyang.liu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change mipi dts cfg.

Change-Id: I771ba605f42dbe8408ba08ecfbe8d6d89c9a7ceb
Signed-off-by: Ming.Tang <ming.tang@spreadtrum.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-native.dts
@@ -249,12 +249,8 @@
 		reset-gpios = <&ap_gpio 37 0>;
 		power-down-gpios = <&ap_gpio 38 0>;
 		host = "dcam0";
+		sprd,phyid = <0>;
 		csi = <&csi0>;
-		port {
-			sensor_main_0: endpoint {
-				remote-endpoint = <&phy0_out_main>;
-			};
-		};
 	};
 
 	sensor_sub: sensor-sub@21 {
@@ -276,30 +272,8 @@
 		reset-gpios = <&ap_gpio 46 0>;
 		power-down-gpios = <&ap_gpio 39 0>;
 		host = "dcam0";
+		sprd,phyid = <0>;
 		csi = <&csi0>;
-		port {
-			sensor_sub_0: endpoint {
-				remote-endpoint = <&phy0_out_sub>;
-			};
-		};
-	};
-};
-
-&mipi_csi_phy0 {
-	status = "okay";
-	sprd,phycfg = <0x00>;
-	sprd,csi = <&csi0>;
-	port {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		phy0_out_main: endpoint@0 {
-			reg = <0>;
-			remote-endpoint = <&sensor_main_0>;
-		};
-		phy0_out_sub: endpoint@1 {
-			reg = <1>;
-			remote-endpoint = <&sensor_sub_0>;
-		};
 	};
 };
 
