--- a/arch/arm/boot/dts/sp7731e-1h20-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h20-native.dts
@@ -252,11 +252,7 @@
 		power-down-gpios = <&ap_gpio 38 0>;
 		host = "dcam0";
 		csi = <&csi0>;
-		port {
-			sensor_main_0: endpoint {
-				remote-endpoint = <&phy0_out_main>;
-			};
-		};
+		sprd,phyid = <0>;
 	};
 
 	sensor_sub: sensor-sub@21 {
@@ -279,29 +275,7 @@
 		power-down-gpios = <&ap_gpio 39 0>;
 		host = "dcam0";
 		csi = <&csi0>;
-		port {
-			sensor_sub_0: endpoint {
-				remote-endpoint = <&phy0_out_sub>;
-			};
-		};
-	};
-};
-
-&mipi_csi_phy0 {
-	status = "okay";
-	sprd,phycfg = <0x00>;
-	sprd,csi = <&csi0>;
-	port {
-		#address-cells = <1>;
-		#size-cells = <0>;
-		phy0_out_main: endpoint@0 {
-			reg = <0>;
-			remote-endpoint = <&sensor_main_0>;
-		};
-		phy0_out_sub: endpoint@1 {
-			reg = <1>;
-			remote-endpoint = <&sensor_sub_0>;
-		};
+		sprd,phyid = <0>;
 	};
 };
 
