Bug #1073066 arm: dts: add aon_intc_regs syscon dts node
[root cause  ] lack of aon_intc_regs node
[changes     ] add aon_intc_regs syscon dts node
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: pike2
[test case]: N/A
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

add aon_intc_regs syscon dts node for pike2

Change-Id: Iae9f641eb4ca851d3c520218362aa23b2eaa7852
Signed-off-by: Xiaopeng Bai <xiaopeng.bai@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -44,6 +44,12 @@
 			reg = <0x33100000 0x10000>;
 		};
 
+		aon_intc_regs: syscon@40200000 {
+			compatible = "syscon";
+			#syscon-cells = <2>;
+			reg = <0x40200000 0x10000>;
+		};
+
 		pmu_apb_regs: syscon@402b0000 {
 			compatible = "syscon";
 			#syscon-cells = <2>;
