--- a/arch/arm64/boot/dts/sprd/sharkl3.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl3.dtsi
@@ -357,12 +357,16 @@
 
 			i2s0: i2s@70d00000 {
 				compatible = "sprd,i2s";
-				reg = <0 0x70d00000 0 0x100000>;
+				reg = <0x70d00000 0x100000>;
 				sprd,dai_name = "i2s_bt_sco0";
 				sprd,hw_port = <0>;
 				sprd,syscon-ap-apb = <&ap_apb_regs>;
 				#sound-dai-cells = <0>;
 				status = "disable";
+				clock-names ="clk_iis0", "clk_twpll_128m", "clk_twpll_153m6";
+				clocks = <&ap_clk CLK_AP_IIS0>,
+					 <&pll CLK_TWPLL_128M>,
+					 <&pll CLK_TWPLL_153M6>;
 			};
 
 			spi3: spi@71400000{
