Bug #1121354 arm64: Add qos dts for mm domain
[root cause  ] add mm qos
[changes     ] dts
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums512
[test case]:open camera
[reviewers   ] wuyi.shen
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add qos dts for mm domain.

Change-Id: Ib3eeca0fd0e43ea5b6732b4f9b4555f751628f25
Signed-off-by: Xuelei Wang <xuelei.wang@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -212,6 +212,7 @@
 					<&pll2 CLK_TWPLL_153M6>,
 					<&mm_clk CLK_MM_MTX>,
 					<&pll2 CLK_TWPLL_512M>;
+				mm_qos_threshold = <&mm_qos_threshold>;
 			};
 
 			mipi_csi_phy0: mipi-csi-phy0 {
