--- a/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
@@ -137,6 +137,8 @@
 
 		/* Allow charging for 6hr */
 		cm-charging-max = <18000000>;
+		/* recovery charging after stop charging 3hr */
+		cm-discharging-max = <10800000>;
 
 		/* the interval to feed charger watchdog */
 		cm-wdt-interval = <60>;
