Bug #1092897 arm64: dts: add jpg qos config for sharkl5pro
[root cause  ] new chip
[changes     ] add jpg qos for sharkl5pro
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:sharkl5pro
[test case]:no
[reviewers   ] leon.li , chunlei.guo
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add jpg qos config for sharkl5pro.

Change-Id: I5df27d182b5af453d650892f2daebd0901e703cd
Signed-off-by: Junhui Niu <junhui.niu1@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -379,6 +379,7 @@
 				syscon-names = "reset",
 					"aon_apb_eb";
 				iommus = <&iommu_jpg>;
+				sprd,qos = <&jpg_qos>;
 				status = "disabled";
 			};
 
