Bug #1138450 misc: sprdwcn_temp: Add support loopcheck function
[root cause  ] new feature
[changes     ] add support
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:yes
[board]:ums512
[test case]:wifi on off
[reviewers   ] billows.wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

The patch add support loopcheck function.

Change-Id: Iaf646fec4396472b3ec8346d16f02732c103d909
Signed-off-by: Songhe Wei <songhe.wei@unisoc.com>

--- a/drivers/misc/sprdwcn_temp/platform/Makefile
+++ b/drivers/misc/sprdwcn_temp/platform/Makefile
@@ -19,6 +19,7 @@ MARLINOFILES += wcn_parn_parser.o
 MARLINOFILES += rdc_debug.o
 MARLINOFILES += wcn_log.o
 MARLINOFILES += wcn_procfs.o
+MARLINOFILES += loopcheck.o
 marlin-$(CONFIG_SDIOHAL) += mem_pd_mgr.o
 marlin-$(CONFIG_WCN_UTILS) += \
 		wcn_debugfs.o
