Bug #1135455 arm64: dts: add aon-timer dts node
[root cause  ] add aon-timer dts node
[changes     ] add aon-timer dts node
[side effects] no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: ums512_1h10
[test case]: cat /proc/interrupt has aon-timer node
[reviewers   ] nianfu.bai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add aon-timer dts node.

Change-Id: I7b07b75af80bdd8634227cbbdfc694b167ba6227
Signed-off-by: Ruifeng Zhang <zhangrf@spreadst.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -1763,6 +1763,19 @@
 				clocks = <&aonapb_gate CLK_SPLK_EB>;
 			};
 
+			timer@32050000 {
+				compatible = "sprd,sharkl5Pro-timer";
+				reg = <0 0x32050000 0 0x20>;
+				interrupts = <GIC_SPI 71 IRQ_TYPE_LEVEL_HIGH>;
+				clocks = <&ext_32k>;
+			};
+
+			timer@32050020 {
+				compatible = "sprd,sharkl5Pro-suspend-timer";
+				reg = <0 0x32050020 0 0x20>;
+				clocks = <&ext_32k>;
+			};
+
 			usb: usb@5fff0000 {
 				compatible = "sprd,sharkl5-musb", "sprd,sharkl5pro-musb";
 				reg = <0 0x5fff0000 0 0x2000>;
