--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -248,6 +248,10 @@
 				sprd,syscon-ap-apb = <&ap_apb_regs>;
 				#sound-dai-cells = <0>;
 				status = "disable";
+				clock-names ="clk_iis0", "clk_twpll_128m", "clk_twpll_153m6";
+				clocks = <&ap_clk CLK_IIS0>,
+					 <&pll CLK_TWPLL_128M>,
+					 <&pll CLK_TWPLL_153M6>;
 			};
 		};
 
