Bug #1137350 input: touchscreen: add the virtualkey-report-abs flag
[root cause  ] add the virtualkey-report-abs flag.
[changes     ] sp9863a-3c10-overlay.dts
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:yes
[confirm dependent commit]:yes
[board]:sp9863a-3c10
[test case]:test the tp as normal.
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add the virtualkey-report-abs flag, disable the touchpanel virtualkey function,
report the data as points.

Change-Id: I14ca9d6f2b13b3b34f664d679c8a4bd70b7ad9fc
Signed-off-by: Xingxing Luo <xingxing.luo@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sp9863a-3c10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-3c10-overlay.dts
@@ -67,6 +67,7 @@ dtbo: dtbo {
 		touchscreen-size-x = <720>;
 		touchscreen-size-y = <1520>;
 
+		virtualkey-report-abs;
 		private-data {
 			a8 = /bits/ 8 <0x5a>;
 		};
