Bug #1137391 arm/arm64: dts: merge k44 dts configure to k414 for 9863a
[root cause ] should use k44 dfs dts configure
[changes ] all sp9863a overlay.dts
[side effects] no
[self test ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: 9863a-1h10
[test case]: power up/sysfs read
[reviewers ] junqiang.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

use 9863a k44 dfs dts configure
Test: cat sysfs

Change-Id: I42a6284d18d70529a5fd264aacfcf2ac7a4f37ca
Signed-off-by: mingmin.ling <mingmin.ling@unisoc.com>

--- a/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv-overlay.dts
+++ b/arch/arm/boot/dts/sp9863a-1h10_go_32b_Natv-overlay.dts
@@ -73,3 +73,9 @@
 		};
 	};
 };
+
+&ddr_dfs {
+	sprd-scene = "boost", "lcdon", "lcdoff", "camlow",
+			"camhigh", "camveryhigh";
+	sprd-freq = <933 400 233 400 622 933>;
+};
