--- a/arch/arm64/boot/dts/sprd/sp9863a-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-2h10-overlay.dts
@@ -51,3 +51,9 @@ dtbo: dtbo {
 &panel {
 	sprd,backlight = <&pwm_backlight>;
 };
+
+&ddr_dfs {
+	sprd-scene = "boost", "lcdon", "lcdoff", "camlow",
+			"camhigh", "camveryhigh";
+	sprd-freq = <933 400 233 400 622 933>;
+};
